tests/miniJava/pos/001246_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( java ) System.out.println ( { } ) ; } }
