tests/miniJava/neg/005914_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { System.out.println ( class ) ; } }
